8310874: Runthese30m crashes with guarantee(entry != nullptr) failed: klass should be in the placeholders during verification